<resources>
    <string name="app_name">GoodWork Solar System</string>
    <string name="splash_name">GoodWork SmartBot</string>

    <string name="action_settings">Settings</string>
    <string name="default_aidialog_title">Default AI Dialog String</string>
    <string name="title_activity_aibutton_sample">AIButtonSampleActivity</string>
    <string name="title_activity_aiservice_sample">AIServiceSample</string>
    <string name="title_activity_aidialog_sample">AIDialogSample</string>
    <string name="title_activity_aitext_sample">AITextSample</string>
    <string name="service_sample_text">Service sample</string>
    <string name="button_sample_text">Button sample</string>
    <string name="dialog_sample_text">Dialog sample</string>
    <string name="text_sample_text">Text sample</string>
    <string name="title_app_widget">Voice command</string>
    <string name="non_empty_query">Query should not be empty</string>

    <string name="hi">Hi</string>

    <string name="use_bluetooth_headset">Use Bluetooth headset</string>
    <string name="chat">Start Chat</string>
    <string name="title_activity_chat">Solar System</string>
    <string name="key_name">Name :</string>
    <string name="value_name">Aayushi Jain</string>
    <string name="key_id">ID :</string>
    <string name="value_id">GWL099</string>
    <string name="key_doj">Joining Date :</string>
    <string name="value_doj">13/02/2017</string>
    <string name="key_designation">Designation :</string>
    <string name="value_designation">Senior Software Engineer</string>
    <string name="key_domain">Domain :</string>
    <string name="value_domain">Android App Development</string>
    <string name="key_age">Age :</string>
    <string name="value_age">24</string>
    <string name="content_description">content description</string>
    <string name="enter_here">Enter here</string>
    <string name="error_message">Sorry, I didn\'t get that. Can you rephrase?</string>
    <string name="intent_id">Intent id:&#160;</string>
    <string name="intent_name">Intent name:&#160;</string>
    <string name="parameters">Parameters:&#160;</string>
    <string name="status_code"><![CDATA[Status code: &#160;]]></string>
    <string name="status_type"><![CDATA[Status type: &#160;]]></string>
    <string name="resolved_query"><![CDATA[Resolved query: &#160;]]></string>
    <string name="action"><![CDATA[Action: &#160;]]></string>
    <string name="speech"><![CDATA[Speech: &#160;]]></string>
    <string name="success_response">Received success response</string>

    <string name="title_activity_splash"> GoodWork Solar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_profile">User Profile</string>
    <string name="welcome_chat_message">Hello welcome to GoodWork Solar</string>
    <string name="welcome_note">Hi Welcome to GoodWorkLabs, I am here to help you from Solar System.</string>
    <string name="goodworklabs">GoodWorkLabs</string>
    <string name="powered_by">Powered by</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  \n\nSed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="on_error">onError</string>
    <string name="on_cancelled">onCancelled</string>
</resources>
