<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:shadowColor="#dd000000"
        android:shadowDx="-1"
        android:shadowDy="-1"
        android:shadowRadius="2"
        android:layout_margin="@dimen/margin_16"
        android:textAllCaps="true"
        android:text="@string/splash_name"
        android:textColor="#f5f5f5"
        android:textSize="@dimen/text_26" />

    <TextView
        android:id="@+id/txt_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txt_gwl"
        android:text="@string/powered_by"
        android:fontFamily="@font/helvetica"
        android:textColor="@color/white"
        android:textSize="@dimen/text_12" />

    <TextView
        android:id="@+id/txt_gwl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/helvetica"
        android:layout_marginBottom="32dp"
        android:text="@string/goodworklabs"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16" />

</RelativeLayout>
